treemap fix data + wrap text

--- a/src/app/home/password-treemap/password-treemap.component.scss
+++ b/src/app/home/password-treemap/password-treemap.component.scss
@@ -86,6 +86,10 @@
         padding:0px;
         font-size:10px !important;
         color: #fff;
+        overflow-wrap: break-word;
+    }
+    .textdiv .number{
+        white-space: nowrap;
     }
     /***** SVG *****/
     .axis {
